--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "chat-engine": "^0.9.21",
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-chat-engine": "^1.11.28",
